setting up call

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,13 +7,8 @@
       "type": "process",
       "label": "Cargo Run",
       "command": "cargo",
-      "args": [
-        "run",
-        "./tests/js/test.js"
-      ],
-      "problemMatcher": [
-        "$rustc"
-      ],
+      "args": ["run", "./tests/js/test.js"],
+      "problemMatcher": ["$rustc"],
       "group": {
         "kind": "build",
         "isDefault": true
@@ -26,19 +21,9 @@
       "type": "process",
       "label": "Get Tokens",
       "command": "cargo",
-      "args": [
-        "run",
-        "--",
-        "-t=Debug",
-        "./tests/js/test.js"
-      ],
-      "problemMatcher": [
-        "$rustc"
-      ],
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
+      "args": ["run", "--", "-t=Debug", "./tests/js/test.js"],
+      "problemMatcher": ["$rustc"],
+      "group": "build",
       "presentation": {
         "clear": true
       }
@@ -47,19 +32,9 @@
       "type": "process",
       "label": "Get AST",
       "command": "cargo",
-      "args": [
-        "run",
-        "--",
-        "-a=Debug",
-        "./tests/js/test.js"
-      ],
-      "problemMatcher": [
-        "$rustc"
-      ],
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
+      "args": ["run", "--", "-a=Debug", "./tests/js/test.js"],
+      "problemMatcher": ["$rustc"],
+      "group": "build",
       "presentation": {
         "clear": true
       }
@@ -68,12 +43,8 @@
       "type": "process",
       "label": "Cargo Test",
       "command": "cargo",
-      "args": [
-        "test"
-      ],
-      "problemMatcher": [
-        "$rustc"
-      ],
+      "args": ["test"],
+      "problemMatcher": ["$rustc"],
       "group": {
         "kind": "test",
         "isDefault": true
@@ -86,13 +57,8 @@
       "type": "process",
       "label": "Cargo Test Build",
       "command": "cargo",
-      "args": [
-        "test",
-        "--no-run"
-      ],
-      "problemMatcher": [
-        "$rustc"
-      ],
+      "args": ["test", "--no-run"],
+      "problemMatcher": ["$rustc"],
       "group": {
         "kind": "build",
         "isDefault": true
